--- a/equipment/views/equipment_view.xml
+++ b/equipment/views/equipment_view.xml
@@ -9,11 +9,12 @@
                 <tree string="equipments">
                     <field name="equipment_number"/>
                     <field name="name"/>
-                    <field name="brand_id"/>
-                    <field name="model_id"/>
+                    <field name="brand_id" widget="many2one"/>
+                    <field name="model_id" widget="many2one"/>
 										<field name="serial"/>
-                    <field name="client_id"/>
-										<field name="modality_id"/>
+                    <field name="client_id" widget="many2one"/>
+										<field name="modality_id" widget="many2one"/>
+										<field name="zone_id" widget="many2one"/>
                 </tree>
             </field>
         </record>
@@ -48,6 +49,7 @@
 													</group>
 													<group>
 															<field name="active"/>
+															<field name="zone_id" widget="many2one"/>
 													</group>
                         </group>
                         <group>
