--- a/technical_support_helpdesk/views/helpdesk_views.xml
+++ b/technical_support_helpdesk/views/helpdesk_views.xml
@@ -12,6 +12,12 @@
                 <xpath expr="//field[@name='partner_id']" position="after">
                     <field name="equipment_id" domain="[('client_id','=',partner_id)]"/>
                 </xpath>
+                <xpath expr="//div[@name='buttons']" position="inside">
+                   <button class="oe_inline oe_stat_button" name="action_view_maintenance" type="object"
+                       icon="fa-cogs">
+                       <field string="Reports" widget="statinfo"/>
+                   </button>
+                </xpath>
 
             </field>
         </record>
