--- a/technical_support_helpdesk/views/helpdesk_views.xml
+++ b/technical_support_helpdesk/views/helpdesk_views.xml
@@ -12,8 +12,8 @@
                 <xpath expr="//field[@name='partner_id']" position="after">
                     <field name="equipment_id" domain="[('client_id','=',partner_id)]"/>
                 </xpath>
-                <xpath expr="//button[@name='open_customer_tickets']" position="inside">
-                   <button class="oe_inline oe_stat_button" name="action_view_maintenance" type="object"
+                <xpath expr="//button[@name='open_customer_tickets']" position="before">
+                   <button class="oe_stat_button" name="action_view_maintenance" type="object"
                        icon="fa-cogs">
                        <field string="Reports" widget="statinfo"/>
                    </button>
