--- a/technical_support_helpdesk/views/helpdesk_views.xml
+++ b/technical_support_helpdesk/views/helpdesk_views.xml
@@ -13,7 +13,7 @@
                     <field name="equipment_id" domain="[('client_id','=',partner_id)]"/>
                 </xpath>
                 <xpath expr="//button[@name='open_customer_tickets']" position="before">
-                   <button class="oe_stat_button" name="action_view_maintenance" type="object"
+                   <button class="oe_stat_button" type="object"
                        icon="fa-cogs">
                        <field string="Reports" widget="statinfo"/>
                    </button>
