--- a/technical_support_helpdesk/views/helpdesk_views.xml
+++ b/technical_support_helpdesk/views/helpdesk_views.xml
@@ -12,6 +12,11 @@
                 <xpath expr="//field[@name='partner_id']" position="after">
                     <field name="equipment_id" domain="[('client_id','=',partner_id)]"/>
                 </xpath>
+                <xpath expr="//button[@name='assign_ticket_to_self']" position="before">
+                   <button class="oe_stat_button" type="object" icon="fa-cogs">
+                       <field string="Reports" widget="statinfo"/>
+                   </button>
+                </xpath>
 
             </field>
         </record>
