--- a/technical_support_helpdesk/views/helpdesk_views.xml
+++ b/technical_support_helpdesk/views/helpdesk_views.xml
@@ -12,7 +12,7 @@
                     <field name="equipment_id" domain="[('client_id','=',partner_id)]"/>
                 </xpath>
                 <xpath expr="//button[@name='open_customer_tickets']" position="before">
-                   <button class="oe_stat_button" name="action_view_report" type="object" icon="fa-cogs">
+                   <button class="oe_stat_button" name="action_view_report" type="object" icon="fa-file-pdf">
                      <field string="Reports" name="technical_support_count" widget="statinfo"/>
                    </button>
                 </xpath>
