--- a/technical_support_helpdesk/views/helpdesk_views.xml
+++ b/technical_support_helpdesk/views/helpdesk_views.xml
@@ -12,11 +12,30 @@
                     <field name="equipment_id" domain="[('client_id','=',partner_id)]"/>
                 </xpath>
                 <xpath expr="//button[@name='open_customer_tickets']" position="before">
-                   <button class="oe_stat_button" name="action_view_report" type="object" icon="fa-file">
+                   <button class="oe_stat_button" name="action_view_report" type="object" icon="fa-file-pdf-o">
                      <field string="Reports" name="technical_support_count" widget="statinfo"/>
                    </button>
                 </xpath>
+                <xpath expr="//button[@name='open_customer_tickets']" position="before">
+                  <notebook>
+                      <page string="Information">
+                        <group>
+                          <group>
 
+                          </group>
+                          <group>
+
+                          </group>
+                        </group>
+                      </page>
+                      <page string="Operations">
+                          <separator string="Description for Operations"/>
+                      </page>
+                      <page string="Documentation">
+                          <separator string="Description for Documentation"/>
+                      </page>
+                  </notebook>
+                </xpath>
             </field>
         </record>
 
