--- a/technical_support/views/technical_support_view.xml
+++ b/technical_support/views/technical_support_view.xml
@@ -188,7 +188,7 @@
                         <button name="button_recreate_picking_parts" states="parts_except" string="Recreate Picking" type="object" class="oe_highlight"/>
                         <button name="action_cancel" type="object" states="draft,ready,parts_except" string="Cancel"/>
                         <button name="action_cancel" type="object" states="released" string="Cancel"/>
-                        <field name="state" widget="statusbar" statusbar_visible="draft,ready,done" statusbar_colors='{"parts_except":"red","released":"blue"}'/>
+                        <field name="state" widget="statusbar" statusbar_visible="draft,ready,done" statusbar_colors='{"parts_except":"red","released":"blue"}' track_visibility = 'onchange'/>
                     </header>
                     <sheet>
                         <div class="oe_title">
@@ -207,9 +207,9 @@
                                 <field name="description"/>
                             </group>
                             <group>
-                                <field name="date_planned"/>
-                                <field name="date_scheduled"/>
-                                <field name="date_execution"/>
+                                <field name="date_planned" track_visibility = 'onchange'/>
+                                <field name="date_scheduled" track_visibility = 'onchange'/>
+                                <field name="date_execution" track_visibility = 'onchange'/>
                                 <field name="user_id"/>
 																<field name="ticket_id" widget="many2one"/>
                             </group>
