--- a/equipment/views/equipment_view.xml
+++ b/equipment/views/equipment_view.xml
@@ -49,6 +49,7 @@
 													</group>
 													<group>
 															<field name="active"/>
+															<field name="location"/>
 															<field name="zone_id" widget="many2one"/>
 													</group>
                         </group>
