--- a/technical_support/views/technical_support_view.xml
+++ b/technical_support/views/technical_support_view.xml
@@ -287,7 +287,7 @@
                             <page string="Tools">
 															<group string="Tools" states="draft,done,released,parts_except,cancel">
 																	<field name="assets_lines">
-																			<tree string="Tools" editable="bottom">
+																			<tree editable="bottom">
 																					<field name="assets_id"/>
 																					<field name="name"/>
 																			</tree>
