--- a/technical_support/views/technical_support_view.xml
+++ b/technical_support/views/technical_support_view.xml
@@ -497,5 +497,168 @@
             parent="menu_maintenance_tasks"
             sequence="100"/>
 
+
+						<!-- list maintenenace -->
+      <record model="ir.ui.view" id="technical_support_checklist_history_tree_view">
+				<field name="name">technical_support.checklist.history.tree</field>
+				<field name="model">technical_support.checklist.history</field>
+				<field name="type">tree</field>
+				<field name="arch" type="xml">
+					<tree string="Checklist"  colors="red:date_planned&lt;=current_date and state=='draft';orange:date_planned&lt;=current_date and state=='confirmed'">
+				  	<field name="name" />
+				    <field name="user_id" />
+				    <field name="date_planned"/>
+				    <field name="date_end"/>
+				    <field name="state"/>
+				  </tree>
+				</field>
+		 </record>
+
+		  <record model="ir.ui.view" id="technical_support_checklist_history_form_view">
+			<field name="name">technical_support.checklist.history.form</field>
+			<field name="model">technical_support.checklist.history</field>
+			<field name="type">form</field>
+			<field name="arch" type="xml">
+				<form string="CheckList">
+					<header>
+						<button name="action_confirmed" states="draft" string="To Confirm" type="object"/>
+				    <button name="action_done" states="draft" string="Valider" type="object" />
+						<button name="action_draft" states="confirmed,done" string="Re-Work" type="object" />
+				    <field name="state" widget="statusbar" />
+				  </header>
+				  <sheet>
+				  	<newline/>
+							<group>
+								<group>
+									<field name="name" />
+									<field name="models_id"/>
+				          <field name="checklist_id" />
+				        </group>
+				        <group>
+				        	<field name="date_planned"/>
+				          <field name="date_end"/>
+				          <field name="user_id"/>
+				        </group>
+				      </group>
+				    <newline/>
+
+				    <separator string="Verification Performed" colspan="4"/>
+				    <field name="answers_ids" colspan="4" >
+				                        <tree string="Answers" editable="bottom">
+				                            <field name="sequence" widget="handle"/>
+				                            <field name="name" select="1"/>
+				                            <field name="answer" select="1"/>
+				                            <field name="detail" select="1"/>
+				                        </tree>
+				                    </field>
+				                	<notebook>
+					                    <page string="Work Order">
+					                    <field name="ot_ids">
+						                    <tree>
+										            <field name="name"/>
+								                    <field name="priority"/>
+								                    <field name="partner_id"/>
+								                    <field name="user_id"/>
+								                    <field name="date"/>
+								                    <field name="state"/>
+						                    </tree>
+						                </field>
+					                    </page>
+				                    </notebook>
+				                    </sheet>
+				                     <div class="oe_chatter">
+					                    <field name="message_follower_ids" widget="mail_followers"/>
+					                    <field name="message_ids" widget="mail_thread"/>
+				                	</div>
+				                </form>
+				            </field>
+				        </record>
+
+
+				        <record id="technical_support_checklist_history_action" model="ir.actions.act_window">
+				            <field name="name">CheckList</field>
+				            <field name="type">ir.actions.act_window</field>
+				            <field name="res_model">technical_support.checklist.history</field>
+				            <field name="view_type">form</field>
+				            <field name="view_mode">tree,form</field>
+				        </record>
+
+
+
+
+					 <!-- maintenance checklist -->
+				        <record id="technical_support_checklist_form_view" model="ir.ui.view">
+				            <field name="name"technical_support.checklist.form</field>
+				            <field name="model">technical_support.checklist</field>
+				            <field name="type">form</field>
+				            <field name="arch" type="xml">
+				                <form string="">
+				                    <sheet>
+				                    <group>
+					                    <group>
+					                    <field name="name"/>
+					                    <field name="active"/>
+					                    </group>
+					                    <group>
+					                    <field name="models_id"/>
+					                    <field name="planned_date" widget="float_time"/>
+					                    </group>
+				                    </group>
+				                    <field name="description" placeholder="Description"/>
+				                    <notebook>
+				                    	 <page string="Questions">
+					                    	<field name="questions_ids">
+							                   	<tree editable="bottom" >
+							                   		<field name="sequence" widget="handle"/>
+						                            <field name="name"  />
+						                        </tree>
+						                     </field>
+					                     </page>
+				                    </notebook>
+				                    </sheet>
+				                </form>
+				            </field>
+				        </record>
+				        <record id="technical_support_checklist_tree_view" model="ir.ui.view">
+				            <field name="name">technical_support.checklist.tree</field>
+				            <field name="model">technical_support.checklist</field>
+				            <field name="type">tree</field>
+				            <field name="arch" type="xml">
+				                <tree string="Control List">
+				                     <field name="sequence" widget="handle"/>
+				                    <field name="name" />
+				                    <field name="models_id" />
+				                </tree>
+				            </field>
+				        </record>
+
+
+				        <record id="technical_support_checklist_action" model="ir.actions.act_window">
+				            <field name="name">Control List</field>
+				            <field name="res_model">technical_support.checklist</field>
+				            <field name="view_type">form</field>
+				            <field name="view_mode">tree,form</field>
+				        </record>
+
+								<!-- liste controle -->
+				        <menuitem
+									id="menu_technical_support_checklist_history"
+									name="Checklist"
+									parent="base.menu_technical_support_root"
+									sequence="7"/>
+
+				 			 <menuitem
+								 id="technical_support_action_view_checklis_id"
+								 name="Lista de control"
+								 parent="menu_technical_support_checklist_history"
+								 action="technical_support_checklist_action"/>
+
+				      <menuitem
+								id="menu_maintenance_checklist_all"
+								name="Lista Completa de Mantenimiento"
+								action="technical_support_checklist_history_action" 
+								parent="menu_technical_support_checklist_history"
+								sequence="5" />
+
  	</data>
 </odoo>
