--- a/technical_support/views/technical_support_view.xml
+++ b/technical_support/views/technical_support_view.xml
@@ -547,6 +547,7 @@
 				                        <tree string="Answers" editable="bottom">
 				                            <field name="sequence" widget="handle"/>
 				                            <field name="name" select="1"/>
+																		<field name="question_id" widget="Many2one"/>
 				                            <field name="answer" select="1"/>
 				                            <field name="detail" select="1"/>
 				                        </tree>
