--- a/technical_support/views/technical_support_view.xml
+++ b/technical_support/views/technical_support_view.xml
@@ -441,6 +441,7 @@
                     </div>
                     <group>
                         <field name="category_id"/>
+												<field name="model_id"/>
                         <field name="maintenance_type"/>
                         <field name="active"/>
                     </group>
