--- a/technical_support/views/technical_support_view.xml
+++ b/technical_support/views/technical_support_view.xml
@@ -288,7 +288,7 @@
 													  </group>
 												</page>
                             <page string="Parts">
-                                    <group string="Planned Parts" states="draft,released,done,parts_except,cancel">
+                                    <group string="Planned Parts" states="done,cancel">
                                         <field name="parts_lines" nolabel="1" context="{'default_categ_id': context.get('default_categ_id')}">
                                             <tree string="Planned Parts" editable="bottom">
                                                 <field name="parts_id" domain="[('isParts','=',True)]" context="{'default_categ_id': context.get('default_categ_id')}"/>
@@ -298,32 +298,32 @@
                                             </tree>
                                         </field>
                                     </group>
-                                    <group string="Available Parts" states="released,parts_except">
-                                        <field name="parts_ready_lines" nolabel="1" readonly="1">
+                                    <group string="Available Parts" states="">
+                                        <field name="parts_ready_lines" nolabel="1">
                                             <tree string="Available Parts">
                                                 <field name="product_id" string="Parts"/>
                                                 <field name="product_qty"/>
-                                                <field name="product_uom" groups="product.group_uom"/>
+                                                <field name="product_uom"/>
                                                 <field name="state" invisible="0"/>
                                             </tree>
                                         </field>
                                     </group>
                                     <group string="Parts to Consume" states="ready">
-                                        <field name="parts_move_lines" nolabel="1" readonly="1">
+                                        <field name="parts_move_lines" nolabel="1">
                                             <tree string="Parts to Consume">
                                                 <field name="product_id" string="Parts"/>
                                                 <field name="product_qty" string="Quantity"/>
-                                                <field name="product_uom" string="Unit of Measure" groups="product.group_uom"/>
+                                                <field name="product_uom" string="Unit of Measure" />
                                                 <field name="state" invisible="1"/>
                                             </tree>
                                         </field>
                                     </group>
                                     <group string="Consumed Parts" states="ready,done">
-                                        <field name="parts_moved_lines" nolabel="1" readonly="1">
+                                        <field name="parts_moved_lines" nolabel="1" >
                                            <tree string="Consumed Parts">
                                                <field name="product_id" readonly="1" string="Parts"/>
                                                <field name="product_qty" readonly="1"/>
-                                               <field name="product_uom" readonly="1" string="Unit of Measure" groups="product.group_uom"/>
+                                               <field name="product_uom" readonly="1" string="Unit of Measure" />
                                                <field name="state" invisible="1"/>
                                            </tree>
                                         </field>
