--- a/technical_support/views/technical_support_view.xml
+++ b/technical_support/views/technical_support_view.xml
@@ -289,9 +289,9 @@
 												</page>
                             <page string="Parts">
                                     <group string="Planned Parts" states="done,cancel">
-                                        <field name="parts_lines" nolabel="1" context="{'default_categ_id': context.get('default_categ_id')}">
+                                        <field name="parts_lines" nolabel="1">
                                             <tree string="Planned Parts" editable="bottom">
-                                                <field name="parts_id" domain="[('isParts','=',True)]" context="{'default_categ_id': context.get('default_categ_id')}"/>
+                                                <field name="parts_id" domain="[('isParts','=',True)]"/>
                                                 <field name="parts_qty"/>
                                                 <field name="parts_uom" groups="product.group_uom"/>
                                                 <field name="name"/>
